--- a/style/index-style.css
+++ b/style/index-style.css
@@ -12,7 +12,7 @@ hr {
 }
 
 .navbar {
-  background-color: #ffffff;
+  background-color: #3f3e3d;
   border-bottom: 1px solid black;
   padding: 0.5rem 1rem;
 }
@@ -20,6 +20,7 @@ hr {
 .nav-itens {
   list-style: none;
   display: flex;
+  
 }
 
 .nav-itens>li {
@@ -29,6 +30,10 @@ hr {
 .navbar-brand img {
   width: 120px;
   height: auto;
+}
+#navpal {
+  color: white;
+  text-decoration: none !important;
 }
 
 .search {
@@ -408,7 +413,7 @@ aside {
 .footer {
   padding: 2rem 1rem;
   background-color: #ffffff;
-  color: #666873;
+  color: #373738;
   margin-top: 2rem;
   border-top: 1px solid black;
 }
