--- a/style/index-style.css
+++ b/style/index-style.css
@@ -412,8 +412,8 @@ aside {
 /* Footer */
 .footer {
   padding: 2rem 1rem;
-  background-color: #ffffff;
-  color: #373738;
+  background-color: #3f3e3d;
+  color: #fff;
   margin-top: 2rem;
   border-top: 1px solid black;
 }
