--- a/view/login-index.html
+++ b/view/login-index.html
@@ -4,35 +4,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mortos de Fome - Cadastro</title>
+  <title>Mortos de Fome - Login</title>
+  <link rel="stylesheet" href="style/login-style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-  integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14..32,200&family=Itim&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14..32,200&family=Itim&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="style/login-style.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="icon" href="assets/marsal.png" type="image/png">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
-      <!-- <a class="navbar-brand" href="index.php"><img src="assets/logo.png"></a> -->
-      <h2><span class="logo-name-1">Mortos</span> de <span class="logo-name-2">Fome</span></h2>
+      <a class="navbar-brand" href="index.html"><img src="assets/logo.png"></a>
+
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
@@ -51,7 +51,7 @@
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="upload-post-index.php">Postar</a></li>
+              <li><a class="dropdown-item" href="upload-post-index.html">Postar</a></li>
             </ul>
           </li>
           <li class="nav-item-1">
@@ -103,43 +103,38 @@
     </div>
   </aside>
   <section class="main-modal">
-    <form action="../controller/CadastroController.php" method="POST" class="main-form">
-      <div class="text">
-          <h1>Cadastro</h1>
-      </div>
-      <hr>
-      <label for="">
-          <p>Seu E-mail para cadastro:</p>
+      <form action="../controller/AuthController.php" method="POST" class="main-form">
+          <div class="text">
+          <h1>Login</h1>
+          </div>
+          <hr>
+          <label for="">
+          <p>Seu E-mail:</p>
           <input required type="email" name="email" id="input-email" class="input-email input" placeholder="E-mail"><br>
-      </label>
-      <label for="">
-          <p>Seu nome de Usuário:</p>
-          <input required type="text" name="username" id="input-user" class="input-email input" placeholder="Nome de usuário"><br>
-      </label>
-      <label for="">
-          <p>Seu nome completo:</p>
-          <input required type="text" name="fullname" id="input-name" class="input-email input" placeholder="Nome completo"><br>
-      </label>    
-      <label for="password">
+          </label>
+          <label for="password">
           <p>Sua senha:</p>
           <input required type="password" name="password" id="input-password" class="input-password input" placeholder="Senha"><br>
-      </label>
-      <label for="password-conf">
-          <p>Confirmar sua senha:</p>
-          <input required type="password" name="confirm_password" id="input-password-confirm" class="input-password input" placeholder="Confirmar senha"><br>
-      </label>
-      <hr>
-      <?php
-      // session_start();
-          if (!empty($_SESSION['errcode_reg'])) {
-              echo $_SESSION['errcode_reg'];
-              unset($_SESSION['errcode_reg']);
-          }
-      ?>
-      <div class="button-main">
-        <button class="button-submit btn-r">Cadastrar</button>
-      </div>
-      </form>
+          </label>
+          <hr>
+          <div class="login-check">
+          <?php
+              // session_start();
+
+              if (!empty($_SESSION['login_error'])) {
+                  echo "<div style='color: red;'>" . $_SESSION['login_error'] . "</div>";
+                  unset($_SESSION['login_error']);
+              }
+              if (!empty($_SESSION['errcode_reg'])) {
+                  echo $_SESSION['errcode_reg'];
+                  unset($_SESSION['errcode_reg']);
+              }
+          ?>
+          </div>
+          <div class="button-main">
+            <button class="button-submit btn-r">Login</button>
+          </div>
+        </form>
   </section>
   <footer class="footer" data-aos="fade-up">
     <div class="footer-container">
@@ -157,7 +152,7 @@
               <a href="#" class="footer-list-link">Afiliados</a>
             </li>
             <li>
-              <a href=""><span class="copyright">2024 Mortos de fome. Todos os direitos reservados.</span></a>
+              <a href="" class="tag-a-main">2024 Mortos de fome. Todos os direitos reservados</a>
             </li>
           </ul>
         </div>
@@ -165,6 +160,7 @@
           <hr class="footer-divider">
         </div>
   </footer>
+  <script src="javascript/login.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
