--- a/view/style/login-style.css
+++ b/view/style/login-style.css
@@ -1,3 +1,7 @@
+
+@import url(navbar.css);
+@import url(footer.css);
+
 * {
   padding: 0;
   margin: 0;
@@ -7,7 +11,12 @@
   font-style: normal;
 }
 
-
+.logo-name-1 {
+  color: red;
+}
+.logo-name-2 {
+  color: gold;
+}
 
 body {
   background-image: url('../assets/background.webp');
@@ -25,114 +34,22 @@ hr {
   visibility: hidden;
 }
 
-.navbar {
-  top: 0;
-  border-radius: 15px;
-  margin: 30px 30px 0px 20px;
-  background-color: #3f3e3db0;
-  padding: 0.5rem 1rem;
-  position: sticky;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(16px) saturate(180%);
-  border: 1px solid rgba(0,0,0,0.42) 80%;
-  z-index: 1000;
-}
-
-
-.nav-itens {
-  list-style: none;
-  display: flex;
-  
-}
-
-.nav-itens>li {
-  padding-left: 20px;
-}
-
-.navbar-brand img {
-  width: 120px;
-  height: auto;
-}
-#navpal {
-  color: white;
-  text-decoration: none !important;
-}
-
-.search {
-  padding: 1rem;
-  max-width: 800px;
-  margin: 11px auto;
-}
-
-.search .form-control {
-  max-width: 100%;
-  border: 1px solid black;
-}
-
-.input-search {
-  border: 1px solid black;
-}
-
-.caro1 {
-  height: 400px;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.caro1 img {
-  height: 400px;
-  object-fit: cover;
-}
-
-.d-block {
-  position: relative;
-}
-
-.abertura {
-  position: absolute;
-  z-index: 1;
-  left: 1%;
-  top: 17%;
-  color: white;
-  padding: 0.5rem 1rem;
-  border-radius: 4px;
-  text-shadow: 
-    1px 1px 0 #000,   
-    -1px -1px 0 #000, 
-    1px -1px 0 #000,  
-    -1px 1px 0 #000;
-}
-
-.abertura-2 {
-  position: absolute;
-  z-index: 1;
-  left: 1%;
-  top: 30%;
-  color: white;
-  padding: 0.5rem 1rem;
-  border-radius: 4px;
-  text-shadow: 
-  1px 1px 0 #000,   
-  -1px -1px 0 #000, 
-  1px -1px 0 #000,  
-  -1px 1px 0 #000;
-}
-
 /* Form de cadastro e login */
 .main-modal {
-  min-height: 75dvh;
+  min-height: 400px;
+  max-height: 1000px;
   flex: 1;
   font-family: "Itim", cursive;
   font-weight: 100;
   font-style: normal;
   padding: 100px;
-  width: 100dvw;
   display: flex;
   justify-content: center;
 }
 
 .main-form {
-  height: 400px;
+  min-height: 400px;
+  max-height: 800px;
   font-family: "Itim", cursive;
   font-weight: 100;
   font-style: normal;
@@ -198,116 +115,6 @@ li .login {
   padding-top: 8px;
 }
 
-.usr-img {
-  width: 25px;
-  border-radius: 15px;
-  background-color: #fff;
-}
-
-li.nav-item-1 {
-  height: 25px;
-  top: 50%;
-}
-
-/* categorias */
-
-.icons-main {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 10px;
-}
-
-.plant-container {
-  padding: 8px 8px 8px 9px;
-  border-color: 1px solid rgba(0, 0, 0, 0.31);
-  border-radius: 5px;
-  background-color: rgba(0, 58, 0, 0.41);
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.plant-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-.zero-lactose-container {
-  padding: 8px 8px 8px 8px;
-  border-color: 1px solid;
-  border-radius: 5px;
-  background-color: rgba(129, 129, 129, 0.41);
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.zero-lactose-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-.zero-gluten-container {
-  padding: 8px 8px 8px 8px;
-  border-color: 1px solid;
-  border-radius: 5px;
-  background-color: rgba(228, 180, 21, 0.41);
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.zero-gluten-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-.zero-sugar-container {
-  padding: 8px 8px 8px 8px;
-  border-color: 1px solid;
-  border-radius: 5px;
-  background-color: rgba(209, 209, 209, 0.41);
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.zero-sugar-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-
-.fit-container {
-  padding: 8px 8px 8px 8px;
-  border-color: 1px solid;
-  border-radius: 5px;
-  background-color: #226bca;
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.fit-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
 
 /* Conversor */
 aside {
@@ -317,7 +124,7 @@ aside {
   font-weight: 100;
   font-style: normal;
   position: fixed;
-  top: 110px;
+  top: 150px;
   left: 11%;
   transform: translateX(-50%);
   background-color: rgba(207, 207, 207, 0.391);
@@ -347,156 +154,6 @@ aside {
 
 .btn-1:hover {
   background-color: rgba(207, 207, 207, 0.6);
-}
-
-/* Cards */
-
-.categorias-main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-.rec-title {
-  display: flex;
-  justify-content: center;
-  position: relative;
-  margin: 0;
-  color: orangered;
-  right: 31rem;
-}
-
-
-.cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 2rem;
-  padding: 2rem;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.cartao a {
-  text-decoration: none;
-  color: black;
-}
-
-.cartao {
-  background: #fff;
-  border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.cartao:hover {
-  transform: translateY(-5px);
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-.cartao-img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.cartao-content {
-  padding: 1rem;
-}
-
-.cartao-title {
-  font-size: 1.25rem;
-  margin-bottom: 0.5rem;
-}
-
-.cartao-text {
-  color: #ffffff;
-  margin-bottom: 1rem;
-}
-
-.cartao-footer {
-  padding: 1rem;
-  border-top: 1px solid #eee;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-/* Footer */
-.footer {
-  padding: 2rem 1rem 30px 30px;
-  border-radius: 15px;
-  margin: 30px 30px 30px 20px;
-  background-color: #3f3e3db0;
-  backdrop-filter: blur(16px) saturate(180%);
-  padding: 0.5rem 1rem;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-  border: 1px solid rgba(0,0,0,0.42) 80%;
-  z-index: 1000;
-}
-
-.footer-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 1.5rem;
-}
-
-.footer-top {
-  color: #ffffff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  padding: 20px;
-  flex-wrap: wrap;
-}
-
-.footer-title {
-  font-size: 1.8rem;
-  color: #ffffff;
-  font-weight: 500;
-  margin-bottom: 1rem;
-  margin: auto;
-  display: flex;
-}
-
-.footer-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 2rem;
-  list-style: none;
-}
-
-.tag-a-main {
-  color: #ffffff;
-  text-decoration-color: #ffffff;
-}
-
-.tag-a-main:hover {
-  text-decoration-color: #d8d8d8;
-}
-
-.footer-list-link {
-  text-decoration: none;
-  color: inherit;
-  transition: color 0.25s;
-}
-
-.footer-list-link:hover {
-  color: #ffffff;
-}
-
-.footer-divider {
-  border: none;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 /* Media Queries */
