--- a/view/aaaaaaaaaaa.html
+++ b/view/aaaaaaaaaaa.html
@@ -6,36 +6,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mortos de Fome</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-  integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-  crossorigin="anonymous" referrerpolicy="no-referrer" />
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-  crossorigin="anonymous"></script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-  href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14..32,200&family=Itim&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-  rel="stylesheet">
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14..32,200&family=Itim&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-  href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14..32,200&family=Itim&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-  rel="stylesheet">
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,200;1,14..32,200&family=Itim&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="style/index-style.css">
   <link rel="icon" href="assets/marsal.png" type="image/png">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg ">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="assets/logo.png"></a>
+  <nav class="navbar navbar-expand-lg position-relative">
+    <div class="container-fluid position-relative">
+      <a class="navbar-brand" href="index.html">
+        <img src="assets/logo.png">
+      </a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
           <li class="nav-item">
             <a id="navpal" class="nav-link" href="#">Em alta</a>
           </li>
@@ -46,7 +47,6 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Receitas</a></li>
-              <li><a class="dropdown-item" href="#"></a></li>
               <li><a class="dropdown-item" onclick="mostrarconversor()">Conversor de medidas</a></li>
               <li>
                 <hr class="dropdown-divider">
@@ -55,11 +55,30 @@
             </ul>
           </li>
           <li class="nav-item-1">
-            <a class="login" onclick="inpLogin()"><img class="usr-img" src="assets/user.svg" alt="Usuário" height="25px"
-                width="25px"></a>
+            <a class="login" onclick="inpLogin()">
+              <img class="usr-img" src="assets/user.svg" alt="Usuário" height="25px" width="25px">
+            </a>
           </li>
         </ul>
+      </div>
 
+      <!-- Centralizado na NAVBAR -->
+      <div class="icons-main-centered">
+        <div class="plant-container">
+          <a href="vegetariano-index.html"><img src="assets/image 3.png" height="30px"></a>
+        </div>
+        <div class="zero-lactose-container">
+          <a href="#"><img src="assets/zero-lactose.svg" height="30px"></a>
+        </div>
+        <div class="zero-gluten-container">
+          <a href="#"><img src="assets/zero-gluten.svg" height="30px" width="30px"></a>
+        </div>
+        <div class="zero-sugar-container">
+          <a href="#"><img src="assets/zero-sugar.svg" height="30px" width="30px"></a>
+        </div>
+        <div class="fit-container">
+          <a href="fitness-index.html"><img src="assets/fit.svg" height="30px" width="30px"></a>
+        </div>
       </div>
     </div>
   </nav>
@@ -139,28 +158,6 @@
       </button>
     </div>
   </div><!--carrossel-end-->
-  <hr>
-  <h1 class="categorias-main">Categorias</h1>
-  <hr>
-  <div class="icons-main">
-    <div class="plant-container">
-      <a href="vegetariano-index.html"><img src="assets/image 3.png" alt="Vegetariano" class="plant" height="30px"></a>
-    </div>
-    <div class="zero-lactose-container">
-      <a href=""><img src="assets/zero-lactose.svg" alt="Zero lactose" class="zero-lactose-img" height="30px"></a>
-    </div>
-    <div class="zero-gluten-container">
-      <a href=""><img src="assets/zero-gluten.svg" alt="Zero gluten" class="zero-gluten-img" height="30px"
-          width="30px"></a>
-    </div>
-    <div class="zero-sugar-container">
-      <a href=""><img src="assets/zero-sugar.svg" alt="Zero açucar" class="zero-sugar-img" height="30px"
-          width="30px"></a>
-    </div>
-    <div class="fit-container">
-      <a href="fitness-index.html"><img src="assets/fit.svg" alt="Fit" class="Fit-img" height="30px" width="30px"></a>
-    </div>
-  </div>
   <section>
     <hr>
     <div class="cards-main">
@@ -276,7 +273,7 @@
           <hr class="footer-divider">
         </div>
   </footer>
-  
+
   <script src="javascript/script.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
