--- a/view/style/index-style.css
+++ b/view/style/index-style.css
@@ -1,6 +1,7 @@
 @import url(footer.css);
 @import url(navbar.css);
 @import url(conversor.css);
+
 * {
   padding: 0;
   margin: 0;
@@ -11,10 +12,10 @@
 }
 
 body {
-  background-image: url('../assets/background.webp');
+  /* background-image: url('../assets/background.webp');
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 }
 
 hr {
@@ -62,10 +63,10 @@ hr {
   color: white;
   padding: 0.5rem 1rem;
   border-radius: 4px;
-  text-shadow: 
-    1px 1px 0 #000,   
-    -1px -1px 0 #000, 
-    1px -1px 0 #000,  
+  text-shadow:
+    1px 1px 0 #000,
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
     -1px 1px 0 #000;
 }
 
@@ -77,11 +78,11 @@ hr {
   color: white;
   padding: 0.5rem 1rem;
   border-radius: 4px;
-  text-shadow: 
-  1px 1px 0 #000,   
-  -1px -1px 0 #000, 
-  1px -1px 0 #000,  
-  -1px 1px 0 #000;
+  text-shadow:
+    1px 1px 0 #000,
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000;
 }
 
 /* Form de cadastro e login */
@@ -154,7 +155,10 @@ hr {
   top: 10px;
 }
 
-#password, #confpswd, #email, #username {
+#password,
+#confpswd,
+#email,
+#username {
   box-shadow: 0 0 10px 6px rgba(207, 207, 207, 0.541);
 }
 
@@ -179,103 +183,7 @@ li.nav-item-1 {
 
 /* categorias */
 
-.icons-main {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 10px;
-}
-
-.plant-container {
-  padding: 8px 8px 8px 9px;
-  border-color: 1px solid rgba(0, 0, 0, 0.31);
-  border-radius: 5px;
-  background-color: rgba(0, 58, 0, 0.41);
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.plant-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-.zero-lactose-container {
-  padding: 8px 8px 8px 8px;
-  border-color: 1px solid;
-  border-radius: 5px;
-  background-color: rgba(129, 129, 129, 0.41);
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.zero-lactose-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-.zero-gluten-container {
-  padding: 8px 8px 8px 8px;
-  border-color: 1px solid;
-  border-radius: 5px;
-  background-color: rgba(228, 180, 21, 0.41);
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.zero-gluten-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-.zero-sugar-container {
-  padding: 8px 8px 8px 8px;
-  border-color: 1px solid;
-  border-radius: 5px;
-  background-color: rgba(209, 209, 209, 0.41);
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.zero-sugar-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}
-
-
-.fit-container {
-  padding: 8px 8px 8px 8px;
-  border-color: 1px solid;
-  border-radius: 5px;
-  background-color: #226bca;
-  transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
-}
-
-.fit-container:hover {
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-}/* Cards */
+/* Cards */
 .categorias-main {
   display: flex;
   justify-content: center;
@@ -311,7 +219,7 @@ li.nav-item-1 {
   background-color: #eeeeeeb0;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(16px) saturate(180%);
-  border: 1px solid rgba(0,0,0,0.42) 80%;
+  border: 1px solid rgba(0, 0, 0, 0.42) 80%;
   border-radius: 12px;
   overflow: hidden;
   transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -353,11 +261,12 @@ li.nav-item-1 {
   align-items: center;
 }
 
-.copyright{
+.copyright {
   color: black;
   transition: color 0.25s;
   text-decoration-color: #353535;
 }
+
 .copyright:hover {
   color: #353535;
   text-decoration-color: #353535;
