--- a/view/style/navbar.css
+++ b/view/style/navbar.css
@@ -6,36 +6,138 @@
     padding: 0.5rem 1rem;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(16px) saturate(180%);
-    border: 1px solid rgba(0,0,0,0.42) 80%;
+    border: 1px solid rgba(0, 0, 0, 0.42) 80%;
     z-index: 1000;
-}  
+}
 
 .nav-itens {
     list-style: none;
     display: flex;
-    color: black;    
+    color: black;
 }
-  
+
 .nav-itens>li {
     padding-left: 20px;
     color: black;
 }
-  
+
 .navbar-brand img {
     width: 120px;
     height: auto;
 }
+
 #navpal {
     color: black;
     text-decoration: none !important;
 }
+
 .usr-img {
     width: 25px;
     border-radius: 15px;
     background-color: #fff;
 }
-  
+
 li.nav-item-1 {
     height: 25px;
     top: 50%;
+}
+
+  .icons-main-centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    gap: 20px;
+  }
+  
+.plant-container {
+    padding: 8px 8px 8px 9px;
+    border-color: 1px solid rgba(0, 0, 0, 0.31);
+    border-radius: 5px;
+    background-color: rgba(0, 58, 0, 0.41);
+    transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+    -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+}
+
+.plant-container:hover {
+    transform: scale(1.1);
+    box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+}
+
+.zero-lactose-container {
+    padding: 8px 8px 8px 8px;
+    border-color: 1px solid;
+    border-radius: 5px;
+    background-color: rgba(129, 129, 129, 0.41);
+    transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+    -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+}
+
+.zero-lactose-container:hover {
+    transform: scale(1.1);
+    box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+}
+
+.zero-gluten-container {
+    padding: 8px 8px 8px 8px;
+    border-color: 1px solid;
+    border-radius: 5px;
+    background-color: rgba(228, 180, 21, 0.41);
+    transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+    -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+}
+
+.zero-gluten-container:hover {
+    transform: scale(1.1);
+    box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+}
+
+.zero-sugar-container {
+    padding: 8px 8px 8px 8px;
+    border-color: 1px solid;
+    border-radius: 5px;
+    background-color: rgba(209, 209, 209, 0.41);
+    transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+    -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+}
+
+.zero-sugar-container:hover {
+    transform: scale(1.1);
+    box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+}
+
+
+.fit-container {
+    padding: 8px 8px 8px 8px;
+    border-color: 1px solid;
+    border-radius: 5px;
+    background-color: #226bca;
+    transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+    -webkit-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 19px 1px rgba(0, 0, 0, 0.64);
+}
+
+.fit-container:hover {
+    transform: scale(1.1);
+    box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
 }
