--- a/src/view/style/imports/rules.css
+++ b/src/view/style/imports/rules.css
@@ -1,9 +1,8 @@
 * {
     scroll-behavior: smooth;
 }
-/* bg */
 body {
-    background-image: url('../assets/background.webp');
+    background-image: url('../assets/background1.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
