--- a/src/view/style/fitness-style.css
+++ b/src/view/style/fitness-style.css
@@ -3,6 +3,11 @@
 @import url(imports/rules.css);
 @import url(imports/font-pack.css);
 @import url(imports/footer.css);
+body {
+  background-image: url('../assets/background1.webp');
+  background-size: cover;
+  background-position: center;
+}
 * {
   padding: 0;
   margin: 0;
