--- a/src/view/style/imports/footer.css
+++ b/src/view/style/imports/footer.css
@@ -2,12 +2,13 @@ footer {
     padding: 2rem 1rem 30px 30px;
     border-radius: 15px;
     margin: 30px 30px 30px 20px;
-    background-color: #eeeeeeb0;
+    background-color: rgb(255, 255, 255);
     backdrop-filter: blur(8px) saturate(180%);
     padding: 0.5rem 1rem;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     border: 1px solid rgba(0,0,0,0.42) 80%;
     z-index: 1000;
+    border: 3px solid #3f3e3d;
   }
   
   .footer-container {
