--- a/src/view/style/imports/navbar.css
+++ b/src/view/style/imports/navbar.css
@@ -2,7 +2,8 @@
     top: 0;
     border-radius: 15px;
     margin: 30px 30px 0px 20px;
-    background-color: #eeeeeeb0;
+    background-color: rgb(255, 255, 255);
+    border: 3px solid #3f3e3d;
     padding: 0.5rem 1rem;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(16px) saturate(180%);
