--- a/src/view/style/index-style.css
+++ b/src/view/style/index-style.css
@@ -1,19 +1,12 @@
 @import url(imports/conversor.css);
 @import url(imports/navbar.css);
-@import url(imports/rules.css);
+/* @import url(imports/rules.css); */
 @import url(imports/font-pack.css);
 @import url(imports/footer.css);
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-}
-
-body {
-  background-image: url('../assets/background.webp');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
 hr {
