--- a/src/view/style/imports/rules.css
+++ b/src/view/style/imports/rules.css
@@ -1,9 +1,22 @@
 * {
     scroll-behavior: smooth;
+} 
+html {
+    position: relative;
+    margin: 0;
+    min-height: 100vh;
 }
-body {
+
+html::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background-image: url('../../assets/background1.webp');
     background-size: cover;
     background-position: center;
-    /* background-repeat: no-repeat; */
+    opacity: 0.5;
+    z-index: -1;
 }
