Update some css

--- a/src/view/style/imports/footer.css
+++ b/src/view/style/imports/footer.css
@@ -5,6 +5,7 @@ footer {
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     z-index: 1000;
     margin: 0;
+    bottom: 0px;
   }
   
   .footer-container {
