update css again

--- a/src/view/style/imports/navbar.css
+++ b/src/view/style/imports/navbar.css
@@ -65,9 +65,9 @@ li.nav-item-1 {
 
 .plant-container:hover {
     transform: scale(1.1);
-    box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    /* box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
     -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64); */
 }
 
 .zero-lactose-container {
@@ -83,9 +83,9 @@ li.nav-item-1 {
 
 .zero-lactose-container:hover {
     transform: scale(1.1);
-    box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    /* box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
     -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64); */
 }
 
 .zero-gluten-container {
@@ -101,9 +101,9 @@ li.nav-item-1 {
 
 .zero-gluten-container:hover {
     transform: scale(1.1);
-    box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    /* box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
     -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64); */
 }
 
 .zero-sugar-container {
@@ -119,9 +119,9 @@ li.nav-item-1 {
 
 .zero-sugar-container:hover {
     transform: scale(1.1);
-    box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    /* box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
     -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64); */
 }
 
 
@@ -138,9 +138,9 @@ li.nav-item-1 {
 
 .fit-container:hover {
     transform: scale(1.1);
-    box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    /* box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
     -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
+    -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64); */
 }
 
 
