--- a/src/view/style/index-style.css
+++ b/src/view/style/index-style.css
@@ -140,21 +140,13 @@ hr {
 
 .cartao {
   background-color: #eeeeeeb0;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); */
   backdrop-filter: blur(16px) saturate(180%);
   border: 1px solid rgba(0, 0, 0, 0.42) 80%;
   border-radius: 12px;
   overflow: hidden;
   transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-/* 
-.cartao:hover {
-  transform: translateY(-5px);
-  transform: scale(1.1);
-  box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -webkit-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-  -moz-box-shadow: 7px 6px 27px -6px rgba(0, 0, 0, 0.64);
-} */
 
 .cartao-img {
   width: 100%;
