--- a/src/view/style/zero-gluten.css
+++ b/src/view/style/zero-gluten.css
@@ -1,6 +1,6 @@
 @import url(imports/conversor.css);
 @import url(imports/navbar.css);
-/* @import url(imports/rules.css); */
+@import url(imports/rules.css); 
 @import url(imports/font-pack.css);
 @import url(imports/footer.css);
 * {
